# TerminalStory

./: .gitignore  CMakeLists.txt  README.md
src/: entity.cc  entity.h  main.cc  render.cc  render.h
